src/core/helper/policys/K8sAllowedRepos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: require-repo-is-gcr
  description: "Requires container images to begin with a string from the specified list."
  annotations:
    configsync.gke.io/cluster-selector: BLANK
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    namespaces:
    - default
  parameters:
    repos:
    - gcr.io/
