src/core/helper/policys/K8sNoEnvVarSecrets.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoEnvVarSecrets
metadata:
  name: no-secrets-as-env-vars-sample
  description: "Prohibits secrets as environment variables in Pod container definitions. Use mounted secret files in data volumes instead: https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-files-from-a-pod"
  annotations:
    configmanagement.gke.io/cluster-selector: ""
spec:
  enforcementAction: dryrun
